# TeachingMaterial

./: README.md
FITB_dataset/: README.md
api_design/: api_flask.py  transcript_api.py
dating/: analysis_dating.ipynb  columns_names.txt
jail/: analysis_jail.ipynb
llm_apps/: economics_terms.csv  rag.py  rag_create.ipynb  rag_webscraping.py
model_explain/: model_explain.ipynb
timeseries/: README.MD  intro-timeseries.ipynb  pyproject.toml
webscrape/: html_scrape.ipynb  list_cluster.ipynb  monte_carlo.ipynb  ols_monte.ipynb  sample_table.html  scrape_paldeck.ipynb  simulation.ipynb  webscraping.ipynb
