[project]
name = "timeseries"
version = "0.1.0"
description = "Interactive time series analysis tutorial"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "jupyter>=1.0.0",
    "ipykernel>=7.0.1",
]
